--- a/app/globals.css
+++ b/app/globals.css
@@ -129,6 +129,7 @@ body {
   );
   background-position: 0% 0%;
   background-size: 8vmin 8vmin;
+  overflow: hidden;
   height: 100vh;
   left: 0px;
   position: absolute;
@@ -136,6 +137,6 @@ body {
   transition: opacity 800ms ease, 
     background-size 800ms ease,
     background-position 800ms ease;
-  width: 100vw;
+  width: 100%;
   z-index: 1;
 }
